# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cdsspy"
version = "1.0.0"
description = "CDSS API client for Python"
readme = "README.md"
authors = [{ name = "cdsspy", email = "anguswatters@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["cdss", "cdsspy"]
dependencies = [
    "feedparser >= 5.2.0",
    "html2text",
    'tomli; python_version < "3.11"',
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["datetime", "requests", "pandas", "pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/anguswg-ucsb/cdsspy"

[project.scripts]
cdsspy = "cdsspy.__main__:main"